# KScript

./: build.py
core/: Mod.Core.zig  test.File.Dir.zig  test.LogName.zig  test.String.Core.zig  test.String.Trait.zig  test.bit.zig  test.logcategory.zig  test.pipeWrite.zig  test.strlen.zig
core/Backend/: GlobalData.asm
core/Backend/Memory/: memcpy_simd_x86_x64.asm  memset_simd_x86_x64.asm  temp.asm  test.c
core/Backend/String/: strlen.zig  strlen_scalar.cpp  strlen_scalar.h  strlen_simd_allwidths_x86_x64.asm  strlen_temp.asm  strlen_temp2.asm  strlen_temp3.asm  test.c
core/Bit/: BitMask.Bit.zig  BitOps.Bit.zig  BitRange.Bit.zig  BitShift.Bit.zig  BitUtils.Bit.zig  Mod.Bit.zig  Trait.Bit.zig
core/Common/: Chars.Common.zig
core/Containers/: Mod.Containers.zig
core/Containers/String/: Box.String.zig  (+4 more)
core/FileSystem/: DirectoryInfo.FileSystem.zig  DirectoryOps.FileSystem.zig  Error.FileSystem.zig  WindowsPathType.FileSystem.zig
core/Logger/: LogCategory.Logger.zig  LogLevel.Logger.zig  LogMessage.Logger.zig  LogName.Logger.zig  LogSink.Logger.zig  LogWriter.Logger.zig  PipeLogWriter.Logger.zig
core/Memory/: Mod.Memory.zig
core/String/: Box.String.zig  Category.String.zig  CharacterType.String.zig  Core.String.zig  Mod.String.zig  Trait.String.zig
test/: copyRemaining.zig
tools/LogViewer/: CMakeLists.txt  LogViewerApp.cpp  MainWindow.cpp  MainWindow.h  Message.h  PipeServer.cpp  PipeServer.h
tools/LogViewer/test/: hello.cpp  hello.zig
tools/script/: RunLogViewer.bat
tools/win32/: MessageLoop.cpp  MessageLoop.h  Window.cpp  Window.h
(+35 files in other folders)
